tests/snapshots/snapshot_comprehensive__snap_envelope_final.snap
---
source: tests/snapshot_comprehensive.rs
expression: envelope_to_value(&env)
---
{
  "receipt": {
    "artifacts": [],
    "backend": {
      "adapter_version": null,
      "backend_version": "1.0.0",
      "id": "mock"
    },
    "capabilities": {},
    "meta": {
      "contract_version": "abp/v0.1",
      "duration_ms": 60000,
      "finished_at": "2025-01-15T10:31:00Z",
      "run_id": "00000000-0000-0000-0000-000000000001",
      "started_at": "2025-01-15T10:30:00Z",
      "work_order_id": "00000000-0000-0000-0000-000000000002"
    },
    "mode": "mapped",
    "outcome": "complete",
    "receipt_sha256": null,
    "trace": [],
    "usage": {
      "cache_read_tokens": null,
      "cache_write_tokens": null,
      "estimated_cost_usd": null,
      "input_tokens": null,
      "output_tokens": null,
      "request_units": null
    },
    "usage_raw": {},
    "verification": {
      "git_diff": null,
      "git_status": null,
      "harness_ok": false
    }
  },
  "ref_id": "run-001",
  "t": "final"
}
