tests/snapshots/snapshot_comprehensive__snap_envelope_hello_default.snap
---
source: tests/snapshot_comprehensive.rs
expression: "serde_json::to_value(&env).unwrap()"
---
{
  "backend": {
    "adapter_version": "0.1.0",
    "backend_version": "1.0.0",
    "id": "sidecar:node"
  },
  "capabilities": {
    "streaming": "native",
    "tool_read": "native"
  },
  "contract_version": "abp/v0.1",
  "mode": "mapped",
  "t": "hello"
}
