tests/snapshots/snapshot_comprehensive__snap_envelope_hello_passthrough.snap
---
source: tests/snapshot_comprehensive.rs
expression: envelope_to_value(&env)
---
{
  "backend": {
    "adapter_version": null,
    "backend_version": null,
    "id": "sidecar:claude"
  },
  "capabilities": {},
  "contract_version": "abp/v0.1",
  "mode": "passthrough",
  "t": "hello"
}
