tests/snapshots/snapshot_comprehensive__snap_envelope_run.snap
---
source: tests/snapshot_comprehensive.rs
expression: envelope_to_value(&env)
---
{
  "id": "run-001",
  "t": "run",
  "work_order": {
    "config": {
      "env": {},
      "max_budget_usd": null,
      "max_turns": null,
      "model": null,
      "vendor": {}
    },
    "context": {
      "files": [],
      "snippets": []
    },
    "id": "00000000-0000-0000-0000-000000000001",
    "lane": "patch_first",
    "policy": {
      "allow_network": [],
      "allowed_tools": [],
      "deny_network": [],
      "deny_read": [],
      "deny_write": [],
      "disallowed_tools": [],
      "require_approval_for": []
    },
    "requirements": {
      "required": []
    },
    "task": "Do something",
    "workspace": {
      "exclude": [],
      "include": [],
      "mode": "staged",
      "root": "."
    }
  }
}
