tests/snapshots/snapshot_comprehensive__snap_error_code_categories.snap
---
source: tests/snapshot_comprehensive.rs
expression: category_map
---
{
  "backend_timeout": "backend",
  "internal": "internal",
  "ir_lowering_failed": "ir",
  "policy_denied": "policy",
  "protocol_invalid_envelope": "protocol"
}
