tests/snapshots/snapshot_comprehensive__snap_error_code_display_all.snap
---
source: tests/snapshot_comprehensive.rs
expression: display_map
---
{
  "backend_auth_failed": "authentication with the backend failed",
  "backend_content_filtered": "content blocked by vendor safety filter",
  "backend_context_length": "input exceeds model context window",
  "backend_crashed": "backend process exited unexpectedly",
  "backend_model_not_found": "requested model was not found on the backend",
  "backend_not_found": "requested backend does not exist",
  "backend_rate_limited": "backend rejected the request due to rate limiting",
  "backend_timeout": "backend timed out",
  "backend_unavailable": "backend is temporarily unavailable",
  "capability_emulation_failed": "capability emulation layer failed",
  "capability_unsupported": "required capability is not supported by the backend",
  "circuit_breaker_open": "circuit breaker is open for the backend",
  "config_invalid": "configuration file or value is invalid",
  "contract_invalid_receipt": "receipt is structurally invalid or cannot be verified",
  "contract_schema_violation": "payload violates the contract schema",
  "contract_version_mismatch": "contract version does not match the expected version",
  "dialect_mapping_failed": "mapping between dialects failed",
  "dialect_unknown": "dialect identifier is not recognised",
  "execution_permission_denied": "operation denied due to insufficient permissions",
  "execution_tool_failed": "tool invocation failed during execution",
  "execution_workspace_error": "an error occurred in the staged workspace",
  "internal": "unexpected internal error",
  "ir_invalid": "IR structure is invalid or inconsistent",
  "ir_lowering_failed": "IR lowering failed",
  "mapping_dialect_mismatch": "source and target dialects are incompatible",
  "mapping_lossy_conversion": "translation succeeded but information was lost",
  "mapping_unmappable_tool": "tool call cannot be represented in the target dialect",
  "mapping_unsupported_capability": "required capability is not supported by the target dialect",
  "policy_denied": "policy rule denied the operation",
  "policy_invalid": "policy definition is malformed",
  "protocol_handshake_failed": "sidecar handshake failed",
  "protocol_invalid_envelope": "envelope failed to parse or has invalid fields",
  "protocol_missing_ref_id": "ref_id field is missing from the envelope",
  "protocol_unexpected_message": "message arrived in unexpected order",
  "protocol_version_mismatch": "protocol version mismatch between host and sidecar",
  "rate_limit_exceeded": "rate limiter blocked the request",
  "receipt_chain_broken": "receipt chain has a gap or out-of-order entry",
  "receipt_hash_mismatch": "computed receipt hash does not match the declared hash",
  "receipt_store_failed": "receipt persistence failed",
  "sidecar_spawn_failed": "sidecar process could not be spawned",
  "stream_closed": "event stream closed prematurely",
  "validation_failed": "request validation failed",
  "workspace_init_failed": "failed to initialise the staged workspace",
  "workspace_staging_failed": "failed to stage files into the workspace"
}
