tests/snapshots/snapshot_comprehensive__snap_error_code_retryable.snap
---
source: tests/snapshot_comprehensive.rs
expression: retryable
---
[
  "backend_unavailable",
  "backend_timeout",
  "backend_rate_limited",
  "backend_crashed",
  "rate_limit_exceeded",
  "circuit_breaker_open",
  "stream_closed"
]
