tests/snapshots/snapshot_comprehensive__snap_error_code_serde_roundtrip.snap
---
source: tests/snapshot_comprehensive.rs
expression: json_codes
---
[
  "protocol_invalid_envelope",
  "backend_timeout",
  "policy_denied",
  "internal",
  "receipt_hash_mismatch"
]
