tests/snapshots/snapshot_comprehensive__snap_event_error_with_code.snap
---
source: tests/snapshot_comprehensive.rs
expression: e
---
{
  "ts": "2025-01-15T10:30:00Z",
  "type": "error",
  "message": "backend crashed unexpectedly",
  "error_code": "backend_crashed"
}
